<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Travel Becomes More Fun</string>
    <string name="signin">Sign In</string>
    <string name="new_account">New Account</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="label_create_new_account">Create New Account</string>
    <string name="label_please_fill_register">
        Please fill up the forms below <br />
        for information
    </string>
    <string name="label_email">Email Address</string>
    <string name="label_continue">Continue</string>
    <string name="label_selfie_time">Selfie Time</string>
    <string name="label_let_the_wold_know">
        Let the world know yourself <br />
        more better and ever
    </string>
    <string name="label_name">Name</string>
    <string name="label_bio">Bio</string>
    <string name="label_explore">Explore Now</string>
    <string name="label_succes_registration">Registration Successful</string>
    <string name="label_success_regis_sub">
        Welcome To Tiket Saya <br />
        enjoy your holiday
    </string>
    <string name="label_my_dashboard">
        My Dashboard
    </string>
    <string name="label_main_menus">Main Menus</string>
    <string name="label_main_menu_sub">Explore the beauty of the world</string>
    <string name="label_ticket_tips">Ticket Tips</string>
    <string name="label_sub_ticket_tips">Learn it for many benefits</string>
    <string name="label_information">Information</string>
    <string name="label_sub_info">Knowing before travel</string>
    <string name="label_buy_ticket">Buy Ticket</string>
    <string name="label_ticket_detail">Ticket Details</string>
    <string name="label_sub_ticket_detail">Check the amount of tickets</string>
    <string name="label_pricing">Pricing</string>
    <string name="label_your_current_balance">Your Current Balance</string>
    <string name="label_total_price">Total Price</string>
    <string name="label_pay_now">Pay Now</string>
    <string name="label_refund_now">Refund Now</string>
    <string name="label_success_buy_ticket">
        Buy Ticket Successfull
    </string>
    <string name="label_sub_ticket_success">
        Enjoy for your Holiday
    </string>
    <string name="label_view_ticket">View Ticket</string>
    <string name="label_my_ticket">My Tickets</string>
    <string name="label_sub_my_tickrt">Explore Beauty World</string>
    <string name="label_edit_profile">Edit Profile</string>
    <string name="label_edit_sub">
        We highly suggest you to <br/>
        use the correct information
    </string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_save_profile">Save Profile</string>
</resources>